Artisan/Product description overflow fix

--- a/web_flask/static/styles/artisan.css
+++ b/web_flask/static/styles/artisan.css
@@ -82,6 +82,7 @@ body {
     margin-bottom: 20px;
     margin-top: 20px;
     text-align: justify;
+    word-wrap: break-word;
 }
 
 .update-button {
